fix: text alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -75,9 +75,6 @@ body {
     max-width: 700px;
     font-style: italic;
 }
-.team-text > p {
-    text-align: justify;
-}
 .team-text > h2 {
     font-size: 56px;
     color: #6BFFF7;
@@ -241,6 +238,9 @@ th, td {
     }
     .team-text {
         margin: 10px;
+    }
+    .team-text  p {
+        text-align: justify;
     }
     .team-text > h2 {
         font-size: 40px;
